# rust_android_jni_demo

./: README.md  build.gradle.kts  settings.gradle.kts  sign.jks
app/: CMakeLists.txt  build.gradle.kts
app/release/: output-metadata.json
app/src/androidTest/java/com/example/jnitest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/top/pingfanh/jni/: MainActivity.kt  RustNative.kt
app/src/main/res/anim/: move_animation.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/: RustNative.java  RustNative.kt
app/src/test/java/com/example/jnitest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build.rs
rust/jni_helper/: Cargo.toml  README.md  RustNative1.kt
rust/jni_helper/examples/: RustNative.java  RustNative.kt  custom.rs  java.rs  kt.rs
rust/jni_helper/src/: fun.rs  lib.rs  utils.rs
rust/src/: auto.rs  jni.rs  lib.rs  ui.rs
rust/win_test/: Cargo.toml
rust/win_test/src/: main.rs
