[package]
name = "rust_jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ping"
crate-type = ["cdylib"]

[dependencies]
jni = {version = '0.21.1'}
#egui = {version = "0.29.1"}
#eframe = "0.29.1"

[build-dependencies]
jni_helper={path = "jni_helper"}